--- a/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj
+++ b/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj
@@ -148,12 +148,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Bill.h" />
+    <ClInclude Include="Market.h" />
     <ClInclude Include="Product.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bill.cpp" />
+    <ClCompile Include="Market.cpp" />
     <ClCompile Include="ppd-lab1.cpp" />
     <ClCompile Include="Product.cpp" />
     <ClCompile Include="stdafx.cpp">
