--- a/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj.filters
+++ b/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Bill.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Market.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Bill.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Market.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
