--- a/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj.filters
+++ b/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Market.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InventoryChecker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Market.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InventoryChecker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
