--- a/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj
+++ b/ppd-lab1/ppd-lab1/ppd-lab1.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="InventoryChecker.h" />
     <ClInclude Include="Market.h" />
     <ClInclude Include="Product.h" />
+    <ClInclude Include="Program.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -162,6 +163,7 @@
     <ClCompile Include="Market.cpp" />
     <ClCompile Include="ppd-lab1.cpp" />
     <ClCompile Include="Product.cpp" />
+    <ClCompile Include="Program.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
